# agentic-rag

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/api/routers/: ingest.py  query.py
backend/core/: config.py  database.py  weaviate_manager.py
backend/models/: document.py
backend/schemas/: document.py
backend/services/: agent_service.py  ingestion_service.py  retrieval_service.py
docs/: API.md  DESIGN.md  INSTALLATION.md  fsd.md  prd.md  tech_stack.md
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: App.css  App.tsx  apiClient.ts
frontend/src/components/: ChatInterface.tsx  FileUpload.tsx
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
