[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "openai (>=1.77.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "tavily-python (>=0.3.3,<0.4.0)" # Added for Tavily search tool
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
